kubernetes/immich/immich-microservices.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-microservices
  name: immich-microservices
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich-microservices
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v3.2.4
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: immich-photos
              mountPath: /data
            - name: immich-secrets
              mountPath: /secrets
          startupProbe:
            exec:
              command:
              - immich-healthcheck
            periodSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
              - immich-healthcheck
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
              - immich-healthcheck
            periodSeconds: 30
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos-pvc
